--- a/css/main.css
+++ b/css/main.css
@@ -37,21 +37,20 @@ h1 {
 }
 .field .tile {
   background-image: url(../images/tile-.png);
-  background-size: cover;
-}
-.field .tile .health {
-  background-color: #ff0000;
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  height: 3px;
 }
 .field .tileW {
   background-image: url(../images/tile-W.png);
 }
 .field .tileE {
+  position: relative;
   background-image: url(../images/tile-E.png);
-  background-size: cover;
+}
+.field .tileE .health {
+  background-color: #ff0000;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  height: 3px;
 }
 .field .tileP {
   position: relative;
@@ -59,7 +58,6 @@ h1 {
 }
 .field .tileP .health {
   background-color: #00ff00;
-  z-index: 11;
   position: absolute;
   left: 0px;
   top: 0px;
