--- a/css/main.css
+++ b/css/main.css
@@ -7,18 +7,47 @@ body {
   color: #ffffff;
 }
 
-h1 {
+h1,
+h2 {
+  margin: 0px;
+  padding: 10px 0px;
   font-family: "Playfair Display";
   font-size: 30px;
-  padding: 10px 0px;
-  margin: 0px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.container h1 {
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .field-box {
+  position: relative;
   border: 2px solid #d0d0d0;
   width: -moz-fit-content;
   width: fit-content;
   overflow: hidden;
+}
+.field-box .end {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(51, 51, 51, 0.7);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.field-box .end h2 {
+  padding: 0;
+  font-size: 60px;
+  text-align: center;
 }
 
 .field {
@@ -68,20 +97,4 @@ h1 {
 }
 .field .tileSW {
   background-image: url(../images/tile-SW.png);
-}
-
-.inventory-box {
-  border: 2px solid #d0d0d0;
-  float: left;
-}
-
-.inventory {
-  position: relative;
-  width: 800px;
-  height: 32px;
-}
-
-.cl {
-  clear: both;
-  display: block;
 }/*# sourceMappingURL=main.css.map */
